--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "vitest --ui"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.10.1",
     "bootstrap": "^5.3.0",
     "jsdom": "^22.1.0",
     "react": "^18.2.0",
