--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.10.1",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
     "jsdom": "^22.1.0",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.4",
+    "react-on-screen": "^2.1.1",
     "vitest": "^0.32.2"
   },
   "devDependencies": {
