--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.10.1",
+    "@emailjs/browser": "^3.11.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
     "jsdom": "^22.1.0",
